--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,11 +9,10 @@
             <font size="4px">
                 <p><font size="5px">Hello.</font></p>
                 <p>My name is Charlotte.</p>
-                <p><i class="fa fa-terminal"></i></p>
                 <p>I study <font color="HotPink">mathematics.</font></p>
-                <p><i class="fa fa-terminal"></i></p>
+
                 <p><br></p>
-                <p><i class="fa fa-anchor"></i></p>
+                <p><i class="fa fa-home"></i></p>
                 <br/>
             </font>
         </div>
