--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             <font size="4px">
                 <p><font size="5px">Hello.</font></p>
                 <p>My name is Charlotte.</p>
-                <p>I study <font color="HotPink">mathematics.</font></p>
+                <p>I study <font color="Plum">mathematics at Georgetown.</font></p>
 
                 <p><br></p>
                 <p><i class="fa fa-home"></i></p>
