--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 <html>
 
 	<body>
-		{% include header.html %}
+		//{% include header.html %}
 		{% include about.html %}
 		{% include experiences.html %}
-		{% include contact.html %}
-		{% include footer.html %}
-		{% include js.html %}
+		//{% include contact.html %}
+		//{% include footer.html %}
+		//{% include js.html %}
 	</body>
 </html>
